--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-streamlit==1.28.1
-streamlit-chat==0.1.1
-groq==0.4.1
-gspread==5.12.0
-google-auth==2.23.4
-pandas==2.1.3
-pydantic==2.5.0
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
-textblob==0.17.1
+streamlit>=1.28.0
+groq>=0.4.0
+gspread>=5.12.0
+google-auth>=2.23.0
+pandas>=2.1.0
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
+python-dotenv>=1.0.0
+textblob>=0.17.0
 googletrans==4.0.0rc1
-cryptography==41.0.7
+cryptography>=41.0.0
 email-validator>=2.0.0
+typing-extensions>=4.8.0
