Simplify requirements for Streamlit Cloud

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
-streamlit>=1.28.0
+streamlit
+groq
+gspread
+google-auth
+pandas
+pydantic
+pydantic-settings
+python-dotenv
+textblob
+googletrans==4.0.0rc1
+cryptography
+email-validator>=1.28.0
 groq>=0.4.0
 gspread>=5.12.0
 google-auth>=2.23.0
