--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor = "#1f77b4"
+primaryColor = "#0e1117"
 backgroundColor = "#0e1117"
 secondaryBackgroundColor = "#1e1e1e"
 textColor = "#fafafa"
